--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div class="  lined">
             <details>
                 <summary class="cols2">
-                        <p class="label">Life Path number</p>
+                        <p class="label"><Span class="blue">Life Path </Span> number</p>
                         <p class="result" id="lpNum"></p>
                 </summary>
                 <p id="lpText"></p>
