--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div class="  lined">
             <details>
                 <summary class="cols2">
-                        <p class="label"><Span class="blue">Life Path </Span> number</p>
+                        <p class="label green">Life Path number</p>
                         <p class="result" id="lpNum"></p>
                 </summary>
                 <p id="lpText"></p>
@@ -123,7 +123,7 @@
         <div class=" lined">
             <details>
                 <summary class="cols2">
-                        <p class="label">Born Day/ Birthday Number</p>
+                        <p class="label green">Born Day/ Birthday Number</p>
                         <p  id="bdNum"></p>
                 </summary>
                 <p id="bdText"></p>
@@ -135,7 +135,7 @@
         <details>
             <summary class="cols2-nil">
                 <div class="f-row" >
-                    <p class="">Expression / Destiny</p>
+                    <p class="green">Expression / Destiny</p>
                     <p class="textpad">Minor Expression / Destiny</p>
                     <p ></p>
                 </div>
@@ -158,7 +158,7 @@
         <details>
             <summary class="cols2-nil">
                 <div class=" f-row " >
-                    <p >Soul Urge / Heart Desire</p>
+                    <p class="green">Soul Urge / Heart Desire</p>
                     <p class="textpad">Minor Soul Urge / Heart's Desire</p>
                 </div>
                 <div class="cols-half">
@@ -181,7 +181,7 @@
         <details>
             <summary class="cols2-nil">
                 <div class=" f-row " >
-                    <p >Personality</p>
+                    <p class="green">Personality</p>
                     <p class="textpad">Minor Personlaity</p>
                 </div>
                 <div class="cols-half">
@@ -204,7 +204,7 @@
         <div class=" lined">
             <details>
                 <summary class="cols2">
-                        <p>Maturity</p>
+                        <p class="blueM">Maturity</p>
                         <p id="mNum"></p>
                 </summary>
                 <p id="mText"></p>
