--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
         <div class="styled-input">
             <span class="span">Date of Birth</span>
+            <select  id="month" required>
                 <option value="1">January</option>
                 <option value="2">February</option>
                 <option value="3">March</option>
