--- a/index.html
+++ b/index.html
@@ -544,6 +544,7 @@
 
     </section>
 
+    <!-- <iframe src="https://tinsel19.github.io/numerology-calculator/" frameborder="0" width="100%" height="1000px"></iframe> -->
 
     </section>
 
