--- a/index.html
+++ b/index.html
@@ -518,9 +518,9 @@
         <h3 id="ymdp">Yearly/Monthly/Daily Personal Cylces</h3>
 
         <div class="bold-head" id="force" >
-            <p >Personal Year</p> 
-            <p>Personal Month</p>
-            <p>Personal Day</p>
+            <p >Personal <br>Year</p> 
+            <p>Personal <br>Month</p>
+            <p>Personal <br>Day</p>
         </div>
 
         <div class="cols3-equal lined" >
