--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
     <section class="main-table hide">
         
         <div class="bold-head" >
-            <p >Present Name</p> 
-            <p>Full Name at Birth</p>
-            <p>Date of Birth</p>
+            <p >Present <br>Name</p> 
+            <p>Full Name at <br>Birth</p>
+            <p>Date of <br>Birth</p>
         </div>
 
         <div class="cols3-equal lined" id="cols3">
