--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="bold-head" >
             <p >Present <br>Name</p> 
             <p>Full Name at <br>Birth</p>
-            <p>Date of <br>Birth</p>
+            <p>Date of Birth</p>
         </div>
 
         <div class="cols3-equal lined" id="cols3">
@@ -544,7 +544,7 @@
 
     </section>
 
-    <!-- <iframe src="https://tinsel19.github.io/Obfuscate/" frameborder="0" width="100%" height="1000px"></iframe> -->
+    <!-- <iframe src="https://tinsel19.github.io/numerology-calculator/" frameborder="0" width="100%" height="1000px"></iframe> -->
 
     </section>
 
