--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
     <form class="form" id="myForm">
         <div class="styled-input">
             <span class="span">Current Name</span>
-            <input type="text" id="cName" placeholder="current name" required>
+            <input type="text" id="cName" placeholder="first & last name" required>
         </div>
 
         <div class="styled-input">
             <span class="span">Full Name at Birth</span>
-            <input type="text" id="fName" placeholder="full name at birth" required>
+            <input type="text" id="fName" placeholder="first, middle & last name" required>
         </div>
 
         <div class="styled-input">
