--- a/index.html
+++ b/index.html
@@ -495,9 +495,96 @@
         </details>
 
 
+        <!-- Percentage of Numbers  -->
+        <h3 id="yforecast">Percentage of Your Numbers</h3>
+        <details>
+            <summary class=" lined" id="cols4Equal">
+                <div class="per-div">
+                    <span class="numHead">1</span>
+                    <span class="perc" id="onePerc">10%</span>
+                </div>
+
+                <div class="per-div">
+                    <span class="numHead">2</span>
+                    <span class="perc" id="twoPerc">10%</span>
+                </div>
+
+                <div class="per-div">
+                    <span class="numHead">3</span>
+                    <span class="perc" id="threePerc">10%</span>
+                </div>
+
+                <div class="per-div">
+                    <span class="numHead">4</span>
+                    <span class="perc" id="fourPerc">10%</span>
+                </div>
+
+                <div class="per-div">
+                    <span class="numHead">5</span>
+                    <span class="perc" id="fivePerc">10%</span>
+                </div>
+                
+                <div class="per-div">
+                    <span class="numHead">6</span>
+                    <span class="perc" id="sixPerc">10%</span>
+                </div>
+
+                <div class="per-div">
+                    <span class="numHead">7</span>
+                    <span class="perc" id="sevenPerc">10%</span>
+                </div>
+
+                <div class="per-div">
+                    <span class="numHead">8</span>
+                    <span class="perc" id="eightPerc">10%</span>
+                </div>
+
+                <div class="per-div">
+                    <span class="numHead">9</span>
+                    <span class="perc" id="ninePerc">10%</span>
+                </div>
+            </summary>
+            <p class="lined" id="percentText"></p>
+        </details>
+
+
+        <!-- Relationship compatibility  -->
+        <h3 id="yforecast">Relationship Compatibility </h3>
+        <details>
+            <summary class=" lined" id="cols4Equal" >
+                <div class="comp-div">
+                    <span class="comp">1</span>
+                </div>
+                <div class="comp-div">
+                    <span class="comp">2</span>
+                </div>
+                <div class="comp-div">
+                    <span class="comp">3</span>
+                </div>
+                <div class="comp-div">
+                    <span class="comp">4</span>
+                </div>
+                <div class="comp-div">
+                    <span class="comp">5</span>
+                </div>
+                <div class="comp-div">
+                    <span class="comp">6</span>
+                </div>
+                <div class="comp-div">
+                    <span class="comp">7</span>
+                </div>
+                <div class="comp-div">
+                    <span class="comp">8</span>
+                </div>
+                <div class="comp-div">
+                    <span class="comp">9</span>
+                </div>
+            </summary>
+            <p class="lined"></p>
+        </details>
+
+
         <h3 id="yforecast">Yearly Forecast Cycles </h3>
-
-
         <details>
             <summary class="cols8 lined"  >
                 <p >Physical <br>Transit</p>                 
