--- a/index.html
+++ b/index.html
@@ -497,8 +497,8 @@
 
         <!-- Percentage of Numbers  -->
         <h3 id="yforecast">Percentage of Your Numbers</h3>
-        <details>
-            <summary class=" lined" id="cols4Equal">
+
+            <div class=" lined" id="cols4Equal">
 
                 <details class="lined">
                     <summary>
@@ -728,9 +728,7 @@
                     </p> <br> <br>
                 </details>
 
-            </summary>
-            <p class="lined" id="percentText"></p>
-        </details>
+            </div>
 
 
         <!-- Relationship compatibility  -->
@@ -772,15 +770,15 @@
         <h3 id="yforecast">Yearly Forecast Cycles </h3>
         <details>
             <summary class="cols8 lined"  >
-                <p >Physical <br>Transit</p>                 
-                <p >Spiritual <br>Transit</p>       
-                <p >Mental <br>Transit</p>
-                <p >Essence <br>Cycle</p>
+                <p class="numHead" >Physical <br>Transit</p>                 
+                <p class="numHead" >Spiritual <br>Transit</p>       
+                <p class="numHead">Mental <br>Transit</p>
+                <p class="numHead">Essence <br>Cycle</p>
                 
-                <p id="phtrNum"></p>
-                <p id="sptrNum"></p>
-                <p id="metrNum"></p>            
-                <p id="escyNum"></p>
+                <p class="perc" id="phtrNum"></p>
+                <p  class="perc" id="sptrNum"></p>
+                <p class="perc" id="metrNum"></p>            
+                <p class="perc" id="escyNum"></p>
             </summary>
             <p id="phyText" class="lined"></p>
             <p id="essText" class="lined"></p>
@@ -796,16 +794,16 @@
         </div>
 
         <div class="cols3-equal lined" >
-            <p id="cYear">2022</p>
-            <p id="cMonth">February</p>
-            <p id="cDay">Thursday</p>
+            <p class="numHead" id="cYear">2022</p>
+            <p class="numHead" id="cMonth">February</p>
+            <p class="numHead" id="cDay">Thursday</p>
         </div>
 
         <details>
             <summary class="cols3-equal lined">
-                <p id="cYearNum"></p>
-                <p id="cMonthNum"></p>
-                <p id="cDayNum"></p>
+                <p class="perc" id="cYearNum"></p>
+                <p class="perc" id="cMonthNum"></p>
+                <p class="perc" id="cDayNum"></p>
             </summary>
             <p class="lined" id="perYearText"></p>
             <p class="lined" id="perMonthText"></p>
