--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
                     <span class="comp">9</span>
                 </div>
             </summary>
-            <p class="lined"></p>
+            <p class="lined" id="relCompText"></p>
         </details>
 
 
