--- a/index.html
+++ b/index.html
@@ -557,31 +557,31 @@
         <details>
             <summary class=" lined" id="cols4Equal" >
                 <div class="comp-div">
-                    <span class="comp">1</span>
+                    <span class="comp" id="oneColor">1</span>
                 </div>
                 <div class="comp-div">
-                    <span class="comp">2</span>
+                    <span class="comp" id="twoColor">2</span>
                 </div>
                 <div class="comp-div">
-                    <span class="comp">3</span>
+                    <span class="comp" id="threeColor">3</span>
                 </div>
                 <div class="comp-div">
-                    <span class="comp">4</span>
+                    <span class="comp" id="fourColor">4</span>
                 </div>
                 <div class="comp-div">
-                    <span class="comp">5</span>
+                    <span class="comp" id="fiveColor">5</span>
                 </div>
                 <div class="comp-div">
-                    <span class="comp">6</span>
+                    <span class="comp" id="sixColor">6</span>
                 </div>
                 <div class="comp-div">
-                    <span class="comp">7</span>
+                    <span class="comp" id="sevenColor">7</span>
                 </div>
                 <div class="comp-div">
-                    <span class="comp">8</span>
+                    <span class="comp" id="eightColor">8</span>
                 </div>
                 <div class="comp-div">
-                    <span class="comp">9</span>
+                    <span class="comp" id="nineColor">9</span>
                 </div>
             </summary>
             <p class="lined" id="relCompText"></p>
